# libgit2-fetch-less

./: .gitignore  CMakeLists.txt  README.md
cmake/: SelectRegex.cmake
examples/: clone.c
get_new_commits/: CMakeLists.txt  README.md  get_new_commits.c  git_bind_rocks.cpp  gitclone.cpp  gitforeach.c  list_memcached.perl  list_rocksdb.cpp  locate_commit.cpp
include/git2/: odb.h  odb_backend.h  tree.h
include/git2/sys/: odb_backend.h
src/: CMakeLists.txt
src/libgit2/: CMakeLists.txt  clone.c  odb.c  odb_memcached.c  odb_rocks.cpp  tree.c
